--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
-          <div class="column has-text-centered" style="justify-content: center; height: 100vh;">
+          <div class="column has-text-centered">
             <img src="static/images/CLoT.png" style="max-width: 30%;" />
             <h1 class="title is-1 publication-title">Let's Think Outside the Box !</h1>
             <h2 class="title is-2 publication-title">Exploring Leap-of-Thought in Large Language Models with Creative
@@ -592,11 +592,11 @@
         </h4>
         <br>
         <div id="carousel-demo" class="carousel results-carousel">
-          <div class="item-0" style="align-items: center; justify-content: center; height: 75vh">
-            <img src="static/images/example0.png" class="interpolation-image" style="width:900px;"
+          <div class="item-0" style="align-items: center; justify-content: center">
+            <img src="static/images/example0.png" class="interpolation-image" style="max-width: 80%; height: auto; max-height: 60vh; "
               alt="Interpolate start reference image." />
             <br>
-            <div class="panel-body has-text-justified" style="max-width: 1200px; margin: 0 auto;">
+            <div class="panel-body has-text-justified" style="max-width: 90%; margin: 0 auto; word-wrap: break-word;">
               <p>
                 Comparison between (multimodal) large language model (red) and its CLoT-integrated version (blue) for
                 Oogiri-style multimodal humor generation. According to the model input that can be image, text or both,
@@ -605,36 +605,35 @@
                 While humor is subjective, these examples demonstrate CLoT's leap-of-thought capacity of using excellent
                 creative thinking to produce high-quality humor responses. Swipe to the next page of the carousel to see 
                 more responses of Oogiri game by CLoT.
-                <br>
               </p>
             </div>
           </div>
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example3.png" class="interpolation-image" style="width:700px;"
+            <img src="static/images/example3.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-4 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example4.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example4.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-2 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example2.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example2.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-1" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example1.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example1.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-7" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example7.png" class="interpolation-image" style="width:600px;"
+            <img src="static/images/example7.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-6" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example6.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example6.png" class="interpolation-image" style="height: 85%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-5" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example5.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example5.png" class="interpolation-image" style="height: 90%"
               alt="Interpolate start reference image." />
           </div>
         </div>
@@ -804,27 +803,27 @@
         <br>
         <div id="carousel-demo" class="carousel results-carousel">
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example8.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example8.png" class="interpolation-image"  style="height: 85%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-4 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example9.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example9.png" class="interpolation-image"  style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-2 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example10.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example10.png" class="interpolation-image" style="height: 75%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-1" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example11.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example11.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-7" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example12.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example12.png" class="interpolation-image" style="height: 65%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-6" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example13.png" class="interpolation-image" style="width:800px;"
+            <img src="static/images/example13.png" class="interpolation-image" style="height: 65%"
               alt="Interpolate start reference image." />
           </div>
         </div>
