--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
         <br>
         <div id="carousel-demo" class="carousel results-carousel">
           <div class="item-0" style="align-items: center; justify-content: center">
-            <img src="static/images/example0.png" class="interpolation-image" style="max-width: 80%; height: auto; max-height: 60vh; "
-              alt="Interpolate start reference image." />
+            <img src="static/images/example0.png" class="interpolation-image"
+              style="max-width: 80%; height: auto; max-height: 60vh; " alt="Interpolate start reference image." />
             <br>
             <div class="panel-body has-text-justified" style="max-width: 90%; margin: 0 auto; word-wrap: break-word;">
               <p>
@@ -603,7 +603,7 @@
                 there are three Oogiri tasks, "Image&Text to Text (IT2T)", "Image to Text (I2T)", and "Text to Text
                 (T2T)", where text can be English (EN), Chinese (CN), and Japanese (JP). The baseline LLM is Qwen-VL.
                 While humor is subjective, these examples demonstrate CLoT's leap-of-thought capacity of using excellent
-                creative thinking to produce high-quality humor responses. Swipe to the next page of the carousel to see 
+                creative thinking to produce high-quality humor responses. Swipe to the next page of the carousel to see
                 more responses of Oogiri game by CLoT.
               </p>
             </div>
@@ -803,11 +803,11 @@
         <br>
         <div id="carousel-demo" class="carousel results-carousel">
           <div class="item-3" style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example8.png" class="interpolation-image"  style="height: 85%"
+            <img src="static/images/example8.png" class="interpolation-image" style="height: 85%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-4 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
-            <img src="static/images/example9.png" class="interpolation-image"  style="height: 95%"
+            <img src="static/images/example9.png" class="interpolation-image" style="height: 95%"
               alt="Interpolate start reference image." />
           </div>
           <div class="item-2 " style="display: flex; align-items: center; justify-content: center; height: 75vh;">
