--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <br>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-chair-tp">
-            <img src="static/images/liangjian1.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/liangjian1.jpg" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;"
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -193,7 +193,7 @@
           </div>
 
           <div class="item item-chair-tp">
-            <img src="static/images/daxiong.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/daxiong.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;"
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -225,7 +225,7 @@
             </div>
           </div>
           <div class="item item-shiba">
-            <img src="static/images/woman1.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/woman1.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -256,7 +256,7 @@
             </div>
           </div>
           <div class="item item-chair-tp">
-            <img src="static/images/dog2.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/dog2.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -289,7 +289,7 @@
             </div>
           </div>
           <div class="item item-fullbody">
-            <img src="static/images/shawshank.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/shawshank.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -323,7 +323,7 @@
             </div>
           </div>
           <div class="item item-blueshirt">
-            <img src="static/images/xiantiaogou1.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/xiantiaogou1.jpg" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -354,7 +354,7 @@
             </div>
           </div>
           <div class="item item-mask">
-            <img src="static/images/hotdog.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/hotdog.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -384,7 +384,7 @@
             </div>
           </div>
           <div class="item item-coffee">
-            <img src="static/images/writedog.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/writedog.jpg" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -415,7 +415,7 @@
             </div>
           </div>
           <div class="item item-toby">
-            <img src="static/images/tom.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/tom.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -446,7 +446,7 @@
             </div>
           </div>
           <div class="item item-steve">
-            <img src="static/images/peiqi1.jpg" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/peiqi1.jpg" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -477,7 +477,7 @@
             </div>
           </div>
           <div class="item item-steve">
-            <img src="static/images/spiderman.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/spiderman.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -507,7 +507,7 @@
             </div>
           </div>
           <div class="item item-steve">
-            <img src="static/images/man.png" class="interpolation-image" style="width:430px; height:330px"
+            <img src="static/images/man.png" class="interpolation-image" style="width:430px; height:330px; object-fit: cover;""
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin-bottom: 0;">
               <div class="panel-body">
@@ -659,7 +659,7 @@
         <br>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-chair-tp">
-            <img src="static/images/cat.jpg" class="interpolation-image" style="width:430px; height:400px"
+            <img src="static/images/cat.jpg" class="interpolation-image" style="width:430px; height:400px; object-fit: cover;"
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
@@ -691,7 +691,7 @@
             </div>
           </div>
           <div class="item item-chair-tp">
-            <img src="static/images/eagle.jpg" class="interpolation-image" style="width:430px; height:400px"
+            <img src="static/images/eagle.jpg" class="interpolation-image" style="width:430px; height:400px; object-fit: cover;"
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
@@ -723,7 +723,7 @@
             </div>
           </div>
           <div class="item item-chair-tp">
-            <img src="static/images/cat2.png" class="interpolation-image" style="width:430px; height:400px"
+            <img src="static/images/cat2.png" class="interpolation-image" style="width:430px; height:400px; object-fit: cover;"
               alt="Interpolate start reference image." />
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
