--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-chair-tp">
             <img src="static/images/cat.jpg" class="interpolation-image" style="width:430px; height:400px; object-fit: cover;"
-              alt="Interpolate start reference image." />
+              alt="Interpolate start reference image." onclick="toggleImageSize(this)" />
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
                 <p>
@@ -714,7 +714,7 @@
           </div>
           <div class="item item-chair-tp">
             <img src="static/images/eagle.jpg" class="interpolation-image" style="width:430px; height:400px; object-fit: cover;"
-              alt="Interpolate start reference image." />
+              alt="Interpolate start reference image."  onclick="toggleImageSize(this)"/>
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
                 <p>
@@ -746,7 +746,7 @@
           </div>
           <div class="item item-chair-tp">
             <img src="static/images/cat2.png" class="interpolation-image" style="width:430px; height:400px; object-fit: cover;"
-              alt="Interpolate start reference image." />
+              alt="Interpolate start reference image."  onclick="toggleImageSize(this)"/>
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
                 <p>
@@ -777,7 +777,7 @@
           </div>
           <div class="item item-chair-tp">
             <img src="static/images/dog.jpg" class="interpolation-image" style="width:430px; height:400px"
-              alt="Interpolate start reference image." />
+              alt="Interpolate start reference image."  onclick="toggleImageSize(this)"/>
             <div class="panel panel-default" style="margin: 0 auto;">
               <div class="panel-body has-text-justified" style="border-bottom: 1px solid #bbbbbb;">
                 <p>
