--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
   <!-- down box: https://www.jq22.com/jquery-info23962 -->
   <link rel="stylesheet" href="static/css/bootstrap-3.3.4.css">
-  <link rel="stylesheet" href="static/css/font-awesome.4.7.0.css">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
@@ -136,7 +135,7 @@
 
             <div class="column">
               <h4 class="panel-title has-text-justified">
-                <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leaf-of-Thought (LoT)</font>
+                <i class="fa fa-bullhorn"></i>&nbsp; To explore the <font color=#c56724>Leap-of-Thought (LoT)</font>
                 ability of LLM, we consider
                 utilizing <font color=#c56724>Oogiri</font> (<a
                   href="https://www.bilibili.com/video/BV1jt4y1g7ob?p=13"><b class="panel-heading-click">大喜利</b></a>, a
