--- a/index.html
+++ b/index.html
@@ -946,8 +946,8 @@
       slidesToShow: 1,
       loop: true,
       infinite: true,
-      autoplay: false,
-      autoplaySpeed: 3000,
+      autoplay: true,
+      autoplaySpeed: 5000,
     });
   </script>
 </body>
