--- a/index.html
+++ b/index.html
@@ -122,11 +122,19 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://xxxx" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://huggingface.co/zhongshsh/CLoT-cn" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fa fa-rocket"></i>
                     </span>
-                    <span>Demo (soon)</span>
+                    <span>Checkpoint</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="https://huggingface.co/datasets/zhongshsh/CLoT-Oogiri-GO" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fa fa-database"></i>
+                    </span>
+                    <span>Dataset</span>
                   </a>
                 </span>
               </div>
