--- a/index.html
+++ b/index.html
@@ -72,32 +72,25 @@
               Humor Generation</h2>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://zhongshsh.github.io">Shanshan Zhong</a><sup>1,2 *</sup>,</span>
+                <a href="https://zhongshsh.github.io">Shanshan Zhong</a>,</span>
               <span class="author-block">
-                <a href="https://dedekinds.github.io">Zhongzhan Huang</a><sup>1,2 *</sup>,</span>
+                <a href="https://dedekinds.github.io">Zhongzhan Huang</a>,</span>
               <span class="author-block">
-                <a href="http://shgao.site">Shanghua Gao</a><sup>3</sup>,
+                <a href="http://shgao.site">Shanghua Gao</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=FSnLWy4AAAAJ">Wushao Wen</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?user=FSnLWy4AAAAJ">Wushao Wen</a>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=Nav8m8gAAAAJ">Liang Lin</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?user=Nav8m8gAAAAJ">Liang Lin</a>,
               </span>
               <br>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=YtUDgPIAAAAJ">Marinka Zitnik</a><sup>3</sup>,
+                <a href="https://scholar.google.com/citations?user=YtUDgPIAAAAJ">Marinka Zitnik</a>,
               </span>
               <span class="author-block">
-                <a href="https://panzhous.github.io">Pan Zhou</a><sup>1</sup>
+                <a href="https://panzhous.github.io">Pan Zhou</a>
               </span>
-            </div>
-
-            <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Sea AI Lab,</span>
-              <span class="author-block"><sup>2</sup>Sun Yat-sen University,</span>
-              <span class="author-block"><sup>3</sup>Harvard University</span>
-              <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
             </div>
 
             <!-- https://www.runoob.com/font-awesome/fontawesome-reference.html -->
@@ -167,6 +160,10 @@
                 differences and
                 individual tastes, the humor generated here might hit differently for everyone. Embrace the diversity of
                 funny and enjoy the ride! 🤪
+              </h4>
+              <br>
+              <h4 class="panel-title has-text-justified">
+                <i class="fa fa-bullhorn"></i>&nbsp; Oh my goodness gracious! This job got accepted by CVPR 2024! 🔥 Woo-hoo! 🔥 🎉🎉🎉
               </h4>
             </div>
           </div>
@@ -885,7 +882,6 @@
   journal={arXiv preprint arXiv:2312.02439},
   year={2023}
 }</code></pre>
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=bGz-i05vJ4AaK_yxWnCTXpUpTC2n9AStAEC3fPN7iJE'></script>
     </div>
     <br>
   </section>
