--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
               Humor Generation</h2>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://zhongshsh.github.io">Shanshan Zhong</a>,</span>
+                <a href="https://zhongshsh.github.io">Shanshan Zhong</a><sup>*</sup>,</span>
               <span class="author-block">
-                <a href="https://dedekinds.github.io">Zhongzhan Huang</a>,</span>
+                <a href="https://dedekinds.github.io">Zhongzhan Huang</a><sup>*</sup>,</span>
               <span class="author-block">
                 <a href="http://shgao.site">Shanghua Gao</a>,
               </span>
